baml_language/crates/baml_tests/snapshots/diagnostic_errors/function_types/baml_tests__diagnostic_errors__function_types__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
type user.BinaryOp = (a: int, b: int) -> int throws never
type user.Complex = (items: int[], lookup: map<string, int>) -> string? throws never
type user.Curried = (x: int) -> (y: int) -> int throws never throws never
type user.FunctionFactory = (config: string) -> (int) -> int throws never throws never
type user.IntToInt = (x: int) -> int throws never
type user.MixedParams = (x: int, int, z: string) -> bool throws never
type user.Producer = () -> string throws never
type user.UnionParam = (value: int | string) -> bool throws never
type user.UnnamedParams = (int, int) -> int throws never
function user.GetTransform() -> (x: int) -> int throws never  [expr] {
  {  } 1
}
