baml_language/crates/baml_tests/snapshots/diagnostic_errors/function_types/baml_tests__diagnostic_errors__function_types__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] E0096

  × this body may throw through callback `handler`, but declared throws is `never`. The callback type does not say what it can throw. If `handler` is an infallible host callback, annotate it with
  │ `throws never`; otherwise catch the call or let the enclosing function declare/propagate the callback's throws.
    ╭─[declared_throws.baml:31:35]
 31 │   return (value: int) -> string { handler(value) }
    ·                                   ───────
    ╰────

  [type] E0001

  × mismatched types
    ╭─[function_types.baml:23:57]
 23 │ ╭─▶ function GetTransform() -> (x: int) -> int throws never {
 24 │ │       // For now just return a placeholder - actual function values come later
 25 │ │       1
 26 │ ├─▶ }
    · ╰──── expected `(x: int) -> int throws never`, found `1`
    ╰────
