baml_language/crates/baml_tests/snapshots/diagnostic_errors/function_types/baml_tests__diagnostic_errors__function_types__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.GetTransform() -> (int) -> int throws never {
    load_const 1
    return
}
